# HOMEWORK_KNN

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Data.cpp.F55B3441CC9492B3.idx  Data.h.13AF325B76E1F6F4.idx  FeatureVector.cpp.09F5D97AD3B4443A.idx  FeatureVector.h.EF88769B27932B36.idx  Sample.cpp.322A706B3811F3CE.idx  Sample.h.E7D00419314CF9F7.idx  main.cpp.E81DE560E910CBB1.idx
project/: ClassificationReport.cpp  ClassificationReport.h  Data.cpp  Data.h  FeatureVector.cpp  FeatureVector.h  Knn.cpp  Knn.h  KnnCosine.cpp  KnnCosine.h  KnnEuclidean.cpp  KnnEuclidean.h  KnnImporter.h  KnnManhattan.cpp  KnnManhattan.h  ProgressBar.cpp  ProgressBar.h  Sample.cpp  Sample.h  main.cpp
